# sis

./: README.md  data.csv  ex.py  new.js  pyproject.toml
bro/: patterns.py  schemas.js  views.py
bro/scripts/: help.py
bro/scripts/api_scripts/: bro_quotes.py  random.py
bro/scripts/batchScore/: batchScore.py
bro/scripts/birthday/: birthday.py
bro/scripts/bye/: bye.py
bro/scripts/google/: google_maps.py
bro/scripts/google_cse/: google_cse.py  services.py
bro/scripts/info/: info.py  services.py
bro/scripts/keys/: keys.py  keys_data.yaml  schema.py  services.py
bro/scripts/lab/: lab.py
bro/scripts/roles/: roles.py
bro/scripts/scores/: schema.py  scores.py  services.py  user_scores.yaml
bro/services/: cron.py  dB.py  redisService.py  user.js
deep/: patterns.py
deep/services/: redis.py
sis/: patterns.py  views.py
sisbot/: .env.example  app.py  manage.py
sisbot/commands/: codes.py  create_bot.py
sisbot/conf/: modules.py  settings.py
sisbot/core/services/: data.csv  redis_service.py
sisbot/routing/: routing.py
