[tool.poetry]
name = "sisbot"
version = "0.1.0"
description = ""
authors = ["NanoNish <nishkarsh1206@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.18.0"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
python-dotenv = "^1.0.0"
py-mon = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
