[tool.poetry]
name = "sisbot"
version = "0.1.0"
description = ""
authors = ["NanoNish <nishkarsh1206@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.18.0"
pyyml = "^0.0.2"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
certifi = "^2023.7.22"
axios = "^0.4.0"
argparse = "^1.4.0"



[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
python-dotenv = "^1.0.0"
py-mon = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
